# ArBytesMoral

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pull_request_template.md
CarMate/: README.md  app.py  requirements.txt
CarMate/static/: index.html
compute/: README.md  ankaios.yaml  ankaios_delete_workloads.sh  prepareLocalWorkloads.sh
compute/car_mate_agents/: Dockerfile  README.md  car_mate_agents.py  common_uuri.py  pyproject.toml  sub.py  z_pub.py  z_sub.py  zenoh.json
compute/car_mate_io/: Dockerfile  README.md  app.py  car_mate_io.py  common_uuri.py  pub.py  pyproject.toml  test.py
compute/car_mate_io/static/: index.html
compute/carla_provider/: Cargo.toml  Dockerfile  README.md
compute/carla_provider/.devcontainer/: Dockerfile
compute/carla_provider/src/: main.rs
compute/mosquitto/config/: mosquitto.conf
compute/mqtt_kuksa_provider/: Cargo.toml  Dockerfile  README.md
compute/mqtt_kuksa_provider/.devcontainer/: Dockerfile  devcontainer.json
compute/mqtt_kuksa_provider/src/: main.rs  unused.rs
compute/vehicle_data_accessor/: Cargo.toml  Dockerfile  README.md
compute/vehicle_data_accessor/.devcontainer/: Dockerfile
compute/vehicle_data_accessor/src/: main.rs
dashboard/rust_tacho_gui/: Cargo.toml  Zenoh Vehicle Dashboard.md
dashboard/rust_tacho_gui/src/: main.rs  zenoh_config.json
dashboard/rust_tacho_gui/src/common/: mod.rs
mcu_sw/: README.md
