# SPDX-License-Identifier: Apache-2.0
[project]
name = "car-mate-io"
version = "0.1.0"
description = "Add your description here"
license = { text = "Apache-2.0" }
authors = [{ name = "Eclipse Foundation and others" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eclipse-zenoh>=1.5.1",
    "flask>=3.1.2",
    "openai>=1.109.1",
    "openai-agents>=0.3.3",
    "speechrecognition>=3.14.3",
    "zenoh-cli>=0.6.8",
]
