# SPDX-License-Identifier: Apache-2.0
[package]
name = "app"
edition = "2024"
license = "Apache-2.0"
license-file = "../../LICENSE"
authors = ["Eclipse Foundation and others"]

[dependencies]
#ankaios_sdk = "0.6.0"
#chrono = "0.4"
# required for encoding/decoding of protobuf varint format
#prost = "0.11"
#serde = { version = "1.0", features = ["derive"] }
#serde_yaml = "0.9"
#log = "0.4"
env_logger = "0.11"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
kuksa-rust-sdk = { git = "https://github.com/eclipse-kuksa/kuksa-rust-sdk.git", branch = "main" }
paho-mqtt = { version = "0.12.3" }