[package]
name = "rust_tacho_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.42", features = ["derive"] }
eframe = "^0.31"
egui_gauge = "0.1.5"
epaint = "^0.31"
serde_json = "1.0.145"
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
up-rust = "0.7.1"
up-transport-zenoh = "0.8.0"
zenoh = "1.5.1"
